--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +21,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +59,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
        "dtype('int8')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +102,7 @@
        "       [0., 0.]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
        "       [12, 12, 12]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +147,7 @@
        "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "105"
+       "66"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 36,  20,  86,  26, 108,  37,  83,   8])"
+       "array([104,  83,  85,  17,  11,  81,  29,  12])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +231,7 @@
        "(2, 4)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +285,7 @@
        "       [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +309,7 @@
        "       [ True,  True,  True,  True]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
        "array([1, 2, 3, 4, 5, 6, 7, 8])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +355,7 @@
        "       [4, 8]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
        "array([4, 5])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -413,16 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40"
+       "np.int64(40)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +448,7 @@
        "array([ 4,  8, 12, 16])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +469,7 @@
        "array([10, 10, 10, 10])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +570,7 @@
        "       [4, 8]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,19 +586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3, 4],\n",
-       "       [5, 6, 7, 8]])"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'saved/nmpy.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# save and load\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msaved/nmpy\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mv_stack\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msaved/nmpy.npy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Code/machine-learning-core/venv/lib/python3.12/site-packages/numpy/lib/_npyio_impl.py:570\u001b[0m, in \u001b[0;36msave\u001b[0;34m(file, arr, allow_pickle, fix_imports)\u001b[0m\n\u001b[1;32m    568\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m file\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m    569\u001b[0m         file \u001b[38;5;241m=\u001b[39m file \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 570\u001b[0m     file_ctx \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    572\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m file_ctx \u001b[38;5;28;01mas\u001b[39;00m fid:\n\u001b[1;32m    573\u001b[0m     arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masanyarray(arr)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'saved/nmpy.npy'"
+     ]
     }
    ],
    "source": [
@@ -1207,6 +1209,197 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 5])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([[1, 2, 3],\n",
+    "                [4, 5, 6]])\n",
+    "arr[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(120,)\n",
+      "[[[  0   1   2]]\n",
+      "\n",
+      " [[  3   4   5]]\n",
+      "\n",
+      " [[  6   7   8]]\n",
+      "\n",
+      " [[  9  10  11]]\n",
+      "\n",
+      " [[ 12  13  14]]\n",
+      "\n",
+      " [[ 15  16  17]]\n",
+      "\n",
+      " [[ 18  19  20]]\n",
+      "\n",
+      " [[ 21  22  23]]\n",
+      "\n",
+      " [[ 24  25  26]]\n",
+      "\n",
+      " [[ 27  28  29]]\n",
+      "\n",
+      " [[ 30  31  32]]\n",
+      "\n",
+      " [[ 33  34  35]]\n",
+      "\n",
+      " [[ 36  37  38]]\n",
+      "\n",
+      " [[ 39  40  41]]\n",
+      "\n",
+      " [[ 42  43  44]]\n",
+      "\n",
+      " [[ 45  46  47]]\n",
+      "\n",
+      " [[ 48  49  50]]\n",
+      "\n",
+      " [[ 51  52  53]]\n",
+      "\n",
+      " [[ 54  55  56]]\n",
+      "\n",
+      " [[ 57  58  59]]\n",
+      "\n",
+      " [[ 60  61  62]]\n",
+      "\n",
+      " [[ 63  64  65]]\n",
+      "\n",
+      " [[ 66  67  68]]\n",
+      "\n",
+      " [[ 69  70  71]]\n",
+      "\n",
+      " [[ 72  73  74]]\n",
+      "\n",
+      " [[ 75  76  77]]\n",
+      "\n",
+      " [[ 78  79  80]]\n",
+      "\n",
+      " [[ 81  82  83]]\n",
+      "\n",
+      " [[ 84  85  86]]\n",
+      "\n",
+      " [[ 87  88  89]]\n",
+      "\n",
+      " [[ 90  91  92]]\n",
+      "\n",
+      " [[ 93  94  95]]\n",
+      "\n",
+      " [[ 96  97  98]]\n",
+      "\n",
+      " [[ 99 100 101]]\n",
+      "\n",
+      " [[102 103 104]]\n",
+      "\n",
+      " [[105 106 107]]\n",
+      "\n",
+      " [[108 109 110]]\n",
+      "\n",
+      " [[111 112 113]]\n",
+      "\n",
+      " [[114 115 116]]\n",
+      "\n",
+      " [[117 118 119]]]\n",
+      "[[[  0   3   6   9  12  15  18  21  24  27  30  33  36  39  42  45  48\n",
+      "    51  54  57  60  63  66  69  72  75  78  81  84  87  90  93  96  99\n",
+      "   102 105 108 111 114 117]]\n",
+      "\n",
+      " [[  1   4   7  10  13  16  19  22  25  28  31  34  37  40  43  46  49\n",
+      "    52  55  58  61  64  67  70  73  76  79  82  85  88  91  94  97 100\n",
+      "   103 106 109 112 115 118]]\n",
+      "\n",
+      " [[  2   5   8  11  14  17  20  23  26  29  32  35  38  41  44  47  50\n",
+      "    53  56  59  62  65  68  71  74  77  80  83  86  89  92  95  98 101\n",
+      "   104 107 110 113 116 119]]]\n",
+      "(40, 1, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.arange(0, 120)\n",
+    "print(arr1.shape)\n",
+    "arr2 = arr1.reshape(40, 1, 3)\n",
+    "print(arr2)\n",
+    "print(arr2.transpose())\n",
+    "print(arr2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1 column2  column3\n",
+      "0        1       A     True\n",
+      "1        2       B    False\n",
+      "2        3       C     True\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    'column1': [1, 2, 3],\n",
+    "    'column2': ['A', 'B', 'C'],\n",
+    "    'column3': [True, False, True]\n",
+    "})\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   column1 column2\n",
+      "0        1       A\n",
+      "1        2       B\n",
+      "2        3       C\n",
+      "   column1 column2\n",
+      "0        1       A\n",
+      "1        2       B\n",
+      "2        3       C\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_df = df[['column1', 'column2']].head()\n",
+    "new_series = df[['column1', 'column2']].head()\n",
+    "print(new_df)\n",
+    "print(new_series)\n",
+    "print(type(new_df))\n",
+    "print(type(new_series))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1229,7 +1422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
